--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font-family: sans-serif;
-  background-color: lightblue;
+  background-color: rgba(133, 192, 233, 1);
 }
 
 .container {
